支持不同环境配置不同JVM参数